<resources>
    <string name="app_name">Ekiki Yen</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="image">image</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="kicking_is_caring">Ki\'king is caring…</string>
    <string name="from_blackground">from Blackground</string>
    <string name="finish">finish</string>
    <string name="updating">Updating…</string>
    <string name="app_intro">Recycling Ekiki me codes from Vodafone</string>
    <string name="version">ALPHA-17.10.30b</string>
    <string name="developers_info">Blackground Labs\nyarteydegreat2@gmail.com\n+233 20589 4019</string>
    <string name="no_ekikime_please_refresh_later">You are late. All Ekiki me has been loaded.\nPlease Refresh later, and be fast.</string>
    <string name="usage_info">Were you able to use the card you just selected? Please confirm so we can update the usage of that card for other users.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_using_ekiki_yen">Start using Ekiki Yen</string>
    <string name="recommend">Share app to friends</string>
    <string name="publish_info">Please use the icon above to share your credit after loading.</string>
    <string name="card_was_invalid">Card was invalid</string>
    <string name="only_code_here">Only code here</string>


    <!-- Additions -->
    <string name="permission_camera_rationale">Access to the camera is needed for scanning the card.</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="title_activity_text_recognizer">TextRecognizer</string>
    <string name="tap_to_load_credit">Tap to load credit</string>
    <string name="scanned_digits_appear_here">Scanned digits appear here</string>
</resources>
